--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,22 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+@theme {
+
+  --color-roxo: #590bd8;
+  --color-roxo-light: #DDD5EA;
+  --color-roxo-dark: #312A4F;
+  --color-branco: #ffffff;
+  --color-cinza: #717171;
+  --color-cinza-claro: #bbbfbf;
+  --color-cinza-claro-plus: #f5f5f5;
+  --color-vermelho: #fe3838;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
